--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^2.2.36"
   },
   "devDependencies": {
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "sass": "^1.14.3"
   }
 }
